--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "@boneswapfi/default-token-list",
+  "name": "@mateswap-fi/default-token-list",
   "version": "0.0.10",
-  "description": "◦ The BoneSwap default token list",
-  "main": "build/boneswap-default.tokenlist.json",
+  "description": "◦ The MateSwap default token list",
+  "main": "build/mateswap-default.tokenlist.json",
   "scripts": {
     "test": "mocha",
-    "build": "rimraf build && mkdir -p build && node internal/write.js > build/boneswap-default.tokenlist.json",
+    "build": "rimraf build && mkdir -p build && node internal/write.js > build/mateswap-default.tokenlist.json",
     "prepare": "husky install",
     "prepublishOnly": "npm test && npm run build",
     "pre-commit": "lint-staged",
     "sync": "node internal/sync.js"
   },
   "files": [
-    "build/boneswap-default.tokenlist.json"
+    "build/mateswap-default.tokenlist.json"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/boneswap-fi/default-token-list.git"
+    "url": "git+https://github.com/mateswap-fi/default-token-list.git"
   },
   "keywords": [
-    "boneswap",
+    "mateswap",
     "default",
     "token",
     "list"
@@ -27,15 +27,15 @@
   "author": "Matthew Lilley <hello@matthewlilley.com>",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/boneswap-fi/default-token-list/issues"
+    "url": "https://github.com/mateswap-fi/default-token-list/issues"
   },
-  "homepage": "https://github.com/boneswap-fi/default-token-list#readme",
+  "homepage": "https://github.com/mateswap-fi/default-token-list#readme",
   "devDependencies": {
     "@commitlint/config-conventional": "^13.1.0",
     "@ethersproject/address": "^5.0.2",
     "@ethersproject/solidity": "^5.3.0",
     "@octokit/rest": "^18.6.2",
-    "@boneswapfi/sdk": "^0.0.24",
+    "@mateswap-fi/sdk": "^0.0.24",
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "ajv": "^6.12.3",
     "chai": "^4.2.0",
