--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "@mateswap-fi/default-token-list",
-  "version": "0.0.10",
+  "name": "@mateswapfi/default-token-list",
+  "version": "0.0.2",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "◦ The MateSwap default token list",
   "main": "build/mateswap-default.tokenlist.json",
   "scripts": {
@@ -35,7 +38,7 @@
     "@ethersproject/address": "^5.0.2",
     "@ethersproject/solidity": "^5.3.0",
     "@octokit/rest": "^18.6.2",
-    "@mateswap-fi/sdk": "^0.0.24",
+    "@mateswapfi/sdk": "^0.0.2",
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "ajv": "^6.12.3",
     "chai": "^4.2.0",
